Samajh se bahr h bhai

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -12,3 +12,10 @@
 .tekturFont{
     font-family: 'Tektur', cursive;
 }
+
+html, body {
+  height: 100%;
+  overflow: hidden; /* locomotive khud scrolling handle karega */
+}
+
+
