--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -35,3 +35,14 @@
   scrollbar-width: thin;
   scrollbar-color: #475569 #1e293b;
 }
+
+.text-shadow {
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5); /* default black shadow */
+}
+
+.text-shadow-black {
+  text-shadow:2px 4px 12px rgb(122 120 119 / 60%); /* orange-600 */
+}
+.text-shadow-white {
+  text-shadow:2px 4px 12px rgba(221, 217, 214, 0.6); /* orange-600 */
+}
