--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,17 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Tektur:wght@400..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Asimovian&family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tektur:wght@400..900&display=swap");
 @import "tailwindcss";
 
+*{
 
-.bebasFont{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Bebas Neue', cursive;
+  font-family: poppins, sans-serif;
 }
-.tekturFont{
-    font-family: 'Tektur', cursive;
+.AsimovianFont {
+ 
+  font-family: "Asimovian", cursive;
+}
+.bebasFont {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Bebas Neue", cursive;
 }
 
+.tekturFont {
+  font-family: "Tektur", cursive;
+}
 
 /* Minimal Scrollbar */
 ::-webkit-scrollbar {
@@ -41,8 +48,8 @@
 }
 
 .text-shadow-black {
-  text-shadow:2px 4px 12px rgb(122 120 119 / 60%); /* orange-600 */
+  text-shadow: 2px 4px 12px rgb(122 120 119 / 60%); /* orange-600 */
 }
 .text-shadow-white {
-  text-shadow:2px 4px 12px rgba(221, 217, 214, 0.6); /* orange-600 */
+  text-shadow: 2px 4px 12px rgba(221, 217, 214, 0.6); /* orange-600 */
 }
