--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -107,3 +107,24 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="number"] {
   -moz-appearance: textfield; /* Firefox */
 }
+
+
+/* custom animation */
+@keyframes slideOverlay {
+  0% {
+    width: 0%;
+    left: 0;
+  }
+  50% {
+    width: 100%;
+    left: 0;
+  }
+  100% {
+    width: 0%;
+    left: 100%;
+  }
+}
+
+.animate-slideOverlay {
+  animation: slideOverlay 0.8s ease-in-out forwards;
+}
